build attendence feature + attendence details
